<b>Version 1.4.0 - 2025-01-30:</b>
- Session Info kann in eigenem Tab in der App angezeigt werden
- Change Log ergänzt, kann über Button als Pop-Up angezigt werden
- Versionnummer aktualisiert, wir in App angezeigt

<b>Version 1.3.1 - 2025-01-29:</b>
- Verbesserungen von Tippfehler im Sideboard

<b>Version 1.3.0 - 2025-01-17:</b>
- Sortierung von Gruppen ist nun vertikal anstatt horizontal
- Bildüberschrift kann kursiv dargestellt werden

<b>Version 1.2.0 - 2025-01-14:</b>
- Session Info mit Packages wir in den Log-Files angezeigt

<b>Version 1.1.1 - 2025-01-09:</b>
- Bei Zahleneingaeb wir nun absolute Zahl verwendet und max. die Anzahl der Spalten
  Verhindert App Crash

<b>Version 1.1.0 - 2024-10-31:</b>
- Tabelle für Gruppenfarbe wir nun korrekt angezigt und verwendet
- Verbesserung der Vorschau der eingelesenen Tabelle

<b>Version 1.0.1 - 2024-10-29:</b>
- Verbesserte Performance, Verhinderung von App Crash von Eingabe gelöscht wird

<b>Version 1.0.0 - 2024-10-21:</b>
- Erste Entwurf für Shiny App mit Bar- und Boxplots
