@@ -19,14 +19,14 @@
     padding-bottom: 15px;
 }
 
-/*
+
 .wrapper {
     height: 100%;
     position: relative;
     overflow-x: hidden;
     overflow-y: hidden
 }
-*/
+
 
 /* Header aendern
 .main-header .logo {
